--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     <section class="skills">
       <h2>🚀 Skills</h2>
       <ul>
-        <li>💻 Programming: Python, C++, TypeScript</li>
-        <li>🛠️ Core Expertise: Machine Learning, Data Analysis, Cloud Architecture</li>
+        <li>💻 Programming: Python, C++</li>
+        <li>🛠️ Core Expertise: Data Analysis, Cloud Architecture</li>
         <li>🌐 Development: Full Stack Development (React.js, Flask), API Design</li>
-        <li>🌀 Interests: Artificial Intelligence, Cloud Computing, Web3</li>
+        <li>🌀 Interests: Cloud Computing, Web3</li>
       </ul>
     </section>
 
@@ -59,8 +59,8 @@
     <section class="contact">
       <h2>🌐 Find Me Online</h2>
       <p>
-        <a href="https://github.com/soujanya-poojari">GitHub</a> | 
-        <a href="https://linkedin.com/in/soujanya-poojari">LinkedIn</a>
+        <a href="https://github.com/soujanya1513">GitHub</a> | 
+    
       </p>
     </section>
 
