--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
       <h2>🚀 Skills</h2>
       <ul>
         <li>💻 Programming: Python, C++</li>
-        <li>🛠️ Core Expertise: Data Analysis, Cloud Architecture</li>
-        <li>🌐 Development: Full Stack Development (React.js, Flask), API Design</li>
-        <li>🌀 Interests: Cloud Computing, Web3</li>
+        <li>Web development</li>
+        <li>html,css</li>
       </ul>
     </section>
 
