--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <!-- Projects Section -->
     <section class="projects">
       <h2>🛠️ Projects</h2>
+      <h2>project code</h2>
+      <p>https://github.com/soujanya1513/project-code</p>
       <article class="project">
         <h3>🏥 CareCompanion</h3>
         <p>Revolutionizing medical record management and nurse hiring for hospitals.</p>
