--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <!-- Projects Section -->
     <section class="projects">
       <h2>🛠️ Projects</h2>
-      <h2>project code</h2>
-      <a>https://github.com/soujanya1513/project-code</a>
       <article class="project">
         <h3>🏥 CareCompanion</h3>
-        <p>Revolutionizing medical record management and nurse hiring for hospitals.</p>
+        <p>Revolutionizing medical record management and nurse hiring for hospitals.
+        <h2>project code</h2>
+      <a>https://github.com/soujanya1513/project-code</a></p>
         <ul>
           <li>🔹 Features: Secure records, advanced matching, intuitive dashboards.</li>
           <li>🔹 Tech Stack:</li>
