--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <article class="project">
         <h3>🏥 CareCompanion</h3>
         <p>Revolutionizing medical record management and nurse hiring for hospitals.
-        <h2>project code</h2>
-      <a>https://github.com/soujanya1513/project-code</a></p>
+        <h4>project code</h4>
+      <a href="https://github.com/soujanya1513/project-code">project-code</a></p>
         <ul>
           <li>🔹 Features: Secure records, advanced matching, intuitive dashboards.</li>
           <li>🔹 Tech Stack:</li>
