Update project link and add LinkedIn reference

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h3>🏥 CareCompanion</h3>
         <p>Revolutionizing medical record management and nurse hiring for hospitals.
         <h4>project code</h4>
-      <a href="https://github.com/soujanya1513/project-code">project-code</a></p>
+      <a href="https://github.com/soujanya1513/portfolio.github.io/blob/main/daaproject.cpp">project-code</a></p>
         <ul>
           <li>🔹 Features: Secure records, advanced matching, intuitive dashboards.</li>
           <li>🔹 Tech Stack:</li>
@@ -61,7 +61,7 @@
       <h2>🌐 Find Me Online</h2>
       <p>
         <a href="https://github.com/soujanya1513">GitHub</a> | 
-    
+        <a href="linkedin.com/in/soujanya-poojari-a4a957369">Linkedin</a>
       </p>
     </section>
 
